<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrincipalActivity">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/begeclaro"
        android:gravity="start">

        <Button
            android:id="@+id/x_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:background="@color/begeclaro"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:textAlignment="center"
            android:textColor="@color/cinzae"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cidade_origem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/cOrigem"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/cidade_destino"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/cDestino"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/duracao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/duracao"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/numero_viajantes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/nViajantes"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/passagem_aerea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/passagem_aerea"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <CheckBox
            android:id="@+id/hospedagem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/gastos_com_hospedagem"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/verde"
        android:gravity="center">

        <Button
            android:id="@+id/cancelar_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/proximo_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/proximo"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
