<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/begeclaro"
    android:orientation="vertical"
    tools:context=".CombustivelActivity">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/begeclaro"
        android:gravity="start">

        <Button
            android:id="@+id/x_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:background="@color/begeclaro"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combustivel"
            android:textAlignment="center"
            android:textColor="@color/cinzae"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1.5"
                android:background="@drawable/shape_textview"
                android:gravity="center"
                android:text="@string/kmTotal"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/km_total"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:hint="@string/km"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1.5"
                android:background="@drawable/shape_textview"
                android:gravity="center"
                android:text="@string/kmPorLitro"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/km_media"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:hint="@string/km"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1.5"
                android:background="@drawable/shape_textview"
                android:gravity="center"
                android:text="@string/custoLitro"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/custo_litro"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:inputType="numberDecimal"
                android:hint="@string/reais"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1.5"
                android:background="@drawable/shape_textview"
                android:gravity="center"
                android:text="@string/totalVeiculos"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/total_veiculos"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:hint="@string/veiculos"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/numero_vazio"
                android:textAlignment="textStart"
                android:textColor="@color/cinzae"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/verde"
        android:gravity="center">

        <Button
            android:id="@+id/voltar_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/voltar"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/proximo_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:padding="0dp"
            android:text="@string/proximo"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
