<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roxo1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/user_interface"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/roxo3"
        android:text="@string/nome"
        android:textAlignment="center"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/roxo3"
        android:text="@string/senha"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/confirmar_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/roxo3"
        android:text="@string/confirmar_senha"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/voltar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:text="@string/voltar"
            android:textColor="@color/white"
            android:padding="0dp"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/cadastrar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_botao"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            android:padding="0dp"
            android:textSize="24sp"/>
    </LinearLayout>
</LinearLayout>